[2단계 - 출석 다시 구현하기] 미미(홍향미) 미션 제출합니다. (#106)
* chore(application): 기존 코드 전부 삭제

* docs(README): 리드미 작성

- TDD 이전 최소한의 설계 기록
- 기능 요구사항 및 시스템 규칙 정리
- 기타 저장소 관련 정보 정리

* test(domain): 출석 저장 테스트 코드 작성

* feat(domain): 출석 저장 기능 구현

* refactor(domain): 출석 저장 리팩토링

- this 키워드는 생성자 내부 및 this 그 자체를 표현할 때만 사용하도록 통일

* test(domain): 부존재 닉네임 확인 테스트 코드 작성

* feat(domain): 부존재 닉네임 확인 기능 구현

* test(domain): 출석 저장 시 부존재 닉네임 예외 처리 테스트 코드 작성

* feat(domain): 출석 저장 시 부존재 닉네임 예외 처리 기능 구현

* refactor(domain): 출석 저장 시 부존재 닉네임 예외 처리 리팩토링

- 존재하는 크루 이름인지 검증하는 로직 중복 제거

* test(domain): 출석 기록 확인 테스트 코드 작성

* feat(domain): 출석 기록 확인 기능 구현

* test(domain): 출석 상태 확인 테스트 코드 작성

* feat(domain): 출석 상태 확인 기능 구현

* refactor(domain): 출석 상태 확인 리팩토링

- 상수 분리
- 불필요 로직 제거
- 네이밍 수정

* test(domain): 지각 상태 확인 테스트 코드 작성

* feat(domain): 지각 상태 확인 기능 구현

* refactor(domain): 지각 상태 확인 리팩토링

- 중복 코드 제거
- 네이밍 수정

* test(domain): 결석 상태 확인 테스트 코드 작성

* feat(domain): 결석 상태 확인 기능 구현

* refactor(domain): 결석 상태 확인 리팩토링

- 불필요 로직 제거

* test(domain): 이미 존재하는 출석 예외 처리 테스트 코드 작성

* feat(domain): 이미 존재하는 출석 예외 처리 기능 구현

* refactor(domain): 이미 존재하는 출석 예외 처리 리팩토링

- 불필요 import 제거

* test(domain): 출석 수정 테스트 코드 작성

* feat(domain): 출석 수정 기능 구현

* refactor(domain): 출석 수정 리팩토링

- modify 메서드 인자에서 원시값, 문자열 제거(Attendance 사용)
- Attendance 동등 기준 Time까지 포함
- 기타(불필요 import 제거, 네이밍 수정)

* test(domain): 출석 수정 시 부존재 닉네임 예외 처리 테스트 코드 작성

* test(domain): 출석 수정 기록 확인 테스트 코드 작성

* feat(domain): 출석 수정 기록 확인 기능 구현

* refactor(domain): 출석 수정 기록 확인 리팩토링

- 중복 제거
- 네이밍 수정
- 테스트 코드 오타 수정

* test(domain): 크루별 출석 기록 확인 테스트 코드 작성

* feat(domain): 크루별 출석 기록 확인 기능 구현

* refactor(domain): 출석 기록 확인 리팩토링

- 클래스 및 메서드 분리

* test(domain): 제적 확인 테스트 코드 작성

* feat(domain): 제적 확인 기능 구현

* refactor: 제적 확인 리팩토링

- 상수 분리

* test(domain): 면담 확인 테스트 코드 작성

* feat(domain): 면담 확인 기능 구현

* refactor(domain): 면담 확인 리팩토링

- 출석 기록과 출석 횟수 구하는 메서드 분리
- 위 작업에 따른 테스트 코드 분리
- 상수 분리

* test(domain): 경고 확인 테스트 코드 작성

* feat(domain): 경고 확인 기능 구현

* refactor(domain): 경고 확인 리팩토링

- 상수 분리